--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "engines": {
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.20.0"
   }
 }
