--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@1.6.4/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "linked": [],
+  "linked": [["@flyui/core", "@flyui/editor"]],
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
