chore: cleanup old
Signed-off-by: ScottAgirs <scott@ijs.to>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
+  "bundledDependencies": [
+    "@flyui/core",
+    "@flyui/theme"
+  ],
   "devDependencies": {
     "prettier": "^2.5.1",
     "turbo": "latest"
