chore: cleanup package.json + pnpm-lock
Signed-off-by: ScottAgirs <scott@ijs.to>

--- a/package.json
+++ b/package.json
@@ -22,20 +22,17 @@
   },
   "turbo": {
     "pipeline": {
+      "dev": {
+        "cache": false
+      },
       "build": {
         "dependsOn": [
           "^build"
         ],
         "outputs": [
-          "dist/**",
-          ".next/**"
+          ".next/**",
+          "dist/**"
         ]
-      },
-      "lint": {
-        "outputs": []
-      },
-      "dev": {
-        "cache": false
       }
     }
   },
