--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "deploy": "turbo run build --scope=docs --includeDependencies --no-deps"
   },
   "bundledDependencies": [
     "@flyui/core",
