--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "deploy": "turbo run build --scope=docs --includeDependencies --no-deps"
+    "deploy": "turbo run build --scope=docs --include-dependencies --no-deps"
   },
   "bundledDependencies": [
     "@flyui/core",
