--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@flyui/core",
-  "private": true,
-  "version": "0.1.7",
+  "private": false,
+  "version": "0.1.9",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
