--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@flyui/core",
   "private": false,
-  "version": "0.1.14",
+  "version": "0.1.15",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "main": "./dist/core.umd.js",
-  "module": "./dist/core.es.js",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
   "exports": {
     ".": {
-      "import": "./dist/core.es.js",
-      "require": "./dist/core.umd.js"
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
     }
   },
   "types": "./dist/src/index.d.ts",
