--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "files": ["dist"],
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "exports": {
