--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "docs",
-  "private": true,
+  "name": "@flyui/docs",
   "version": "0.1.16",
+  "private": true,
   "scripts": {
-    "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start ",
+    "dev": "next dev -p 3002",
+    "lint": "TIMING=1 next lint",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@flyui/core": "workspace:*"
+    "@flyui/core": "*",
+    "@flyui/utils": "*",
+    "next": "^12.0.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
+    "@flyui/tsconfig": "*",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "eslint-preset-acme": "*",
+    "typescript": "^4.5.4"
   }
 }
