--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "eslint": "7.32.0",
     "prettier": "^2.5.1",
     "turbo": "latest"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.21.0"
   }
 }
