--- a/packages/flyui-tsconfig/package.json
+++ b/packages/flyui-tsconfig/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flyui/tsconfig",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "license": "MIT",
   "main": "index.js",
   "files": [
@@ -9,7 +9,5 @@
     "nextjs.json",
     "react-library.json"
   ],
-  "publishConfig": {
-    "access": "public"
-  }
+  "private": true
 }
