--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -21,7 +21,10 @@
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
     "eslint-preset-acme": "*",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4"
   }
 }
